Added basic expenses rrequired project funcitonalitites, expenses, budget, summary components

--- a/budget-app/src/Components/Expenses/ExpenseItem.css
+++ b/budget-app/src/Components/Expenses/ExpenseItem.css
@@ -6,17 +6,12 @@
   padding: 0.5rem;
   margin: 0.5rem 0;
   border-radius: 12px;
-  background-color: #4b4b4b;
+  background-color: rgba(255,255,235,0.2);
   text-align: left;
+  position: relative;
 }
 
 .expense-item__description {
-  /* display: flex;
-  flex-direction: row;
-  gap: 1rem;
-  align-items: center;
-  justify-content: flex-start;
-  flex: 1; */
   width: 100%;
   display: grid;
   grid-template-columns: 25% 50% 25%;
@@ -53,4 +48,19 @@
   width: max-content;
   min-width: 3.5rem;
   justify-self: end;
+  margin-right: 0.5rem;
+}
+
+
+.trash__icon {
+  position: absolute;
+  right: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  display: none;
+}
+
+
+.expense-item:hover .trash__icon {
+  display: block;
 }
