--- a/budget-app/src/Components/Expenses/ExpenseDate.css
+++ b/budget-app/src/Components/Expenses/ExpenseDate.css
@@ -4,7 +4,7 @@
     width: 8rem;
     height: 3rem;
     border: 1px solid #ececec;
-    background-color: #2a2a2a;
+    background-color: rgba(50,235,235,0.25);
     color: white;
     border-radius: 12px;
     align-items: center;
@@ -14,6 +14,7 @@
 .expense-date__month {
     font-size: 1rem;
     font-weight: bold;
+    margin-right: 0.5ch;
 }
 
 .expense-date__year {
