--- a/budget-app/src/Components/Expenses/ExpenseItem.css
+++ b/budget-app/src/Components/Expenses/ExpenseItem.css
@@ -55,6 +55,7 @@
 .trash__icon {
   position: absolute;
   right: 0;
+  bottom: 0;
   border-radius: 50%;
   cursor: pointer;
   display: none;
@@ -62,5 +63,19 @@
 
 
 .expense-item:hover .trash__icon {
+  display: block;
+}
+
+.edit__icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  display: none;
+}
+
+
+.expense-item:hover .edit__icon {
   display: block;
 }
