--- a/budget-app/src/Components/MainSection/MainContent.css
+++ b/budget-app/src/Components/MainSection/MainContent.css
@@ -2,6 +2,6 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template: auto / 75% 25%;
+    grid-template: 1fr / 75% 25%;
     grid-template-areas: "main-content sidebar";
 }
