--- a/budget-app/src/Components/SideBar/SideBar.css
+++ b/budget-app/src/Components/SideBar/SideBar.css
@@ -3,4 +3,41 @@
     height: 100%;
     grid-area: "sidebar";
     background-color: whitesmoke;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.card__section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 2rem ;
+}
+
+button.cards_budget-expenses {
+    padding: 1rem;
+    margin: 2rem auto;
+    width: 10rem;
+    max-width: 90%;
+    height: 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-top: 0.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+button.cards_budget-expenses:hover {
+    opacity: 0.9;
+}
+
+button.cards_budget-expenses:active {
+    opacity: 1;
 }
