budget-app: added summary chart

--- a/budget-app/src/Components/Chart/Chart.css
+++ b/budget-app/src/Components/Chart/Chart.css
@@ -1,9 +1,12 @@
 .chart {
     padding: 1rem;
     border-radius: 12px;
-    background-color: #f8dfff;
+    background-color: rgb(173, 216, 230);
+    background:rgba(173, 216, 230,0.5);
     text-align: center;
     display: flex;
     justify-content: space-around;
     height: 10rem;
+    width: 85%;
+    margin-inline: auto;
 }
